import UIKit

struct Device {
    enum Kind: String {
        case iphoneSE = "iPhone SE (2nd & 3rd generation)"
        case iphone12_13Mini = "iPhone 12/13 mini"
        case iphoneXS_11Pro = "iPhone XS/11 Pro"
        case iphone12_13_14 = "iPhone 12/13/14/16e"
        case iphone15_15Pro_16 = "iPhone 15/15 Pro/16"
        case iphone16Pro_17 = "iPhone 16 Pro/17/17 Pro"
        case iphoneXR_11 = "iPhone XR/11"
        case iphoneAir = "iPhone Air"
        case iphone12_13ProMax_14Plus = "iPhone 12/13 Pro Max/14 Plus"
...
